hphp/hack/test/typecheck/function_pointer/bad_syntax.php.exp
File "bad_syntax.php", line 9, characters 8-18:
Function pointers must be explicitly specified (Parsing[1002])
File "bad_syntax.php", line 16, characters 8-13:
Function pointers must be explicitly specified (Parsing[1002])
File "bad_syntax.php", line 16, characters 8-15:
Function pointers must be explicitly named (Typing[4363])
